@@ -48,7 +48,7 @@ function slice(array, index)
 
 /**
  * Please use this bind, not the one from Function.prototype
- * @param {function()} func
+ * @param {function(...)} func
  * @param {Object} thisObject
  * @param {...number} var_args
  */
@@ -552,7 +552,7 @@ InjectedScript.prototype = {
         var callFrame = this._callFrameForId(topCallFrame, callFrameId);
         if (!callFrame)
             return "Could not find call frame with given id";
-        return this._evaluateAndWrap(callFrame.evaluate, callFrame, expression, objectGroup, true, injectCommandLineAPI, returnByValue);
+        return this._evaluateAndWrap(callFrame.evaluate, callFrame, expression, objectGroup, true, injectCommandLineAPI, returnByValue, generatePreview);
     },
 
     /**
